# clinical-trial-env

./: pyproject.toml
server/: app.py
